# Walrio

./: .gitignore  AUTHORS  BUILD.md  CONTRIBUTING.md  Makefile  README.md  build_gui.bat  build_gui.py  gst_runtime_hook.py  pyproject.toml  requirements-build.txt  requirements.txt  test_daemon_events.py
.github/: pull_request_template.md
.github/scripts/: build_gui.py  build_gui_old.py  enhanced_style_checker.py  gst_runtime_hook.py
.github/workflows/: actions-bot.yml  bot-check.yml  build-gui.yml  build-linux.yml  build-lite-linux.yml  build-lite-macos.yml  build-lite-windows.yml  build-macos.yml  build-main-linux.yml  build-main-macos.yml  build-main-windows.yml  build-release.yml  build-windows.yml  contributing-checker.yml  docs.yml  pr-check-bot.yml  pr-check.yml  pr-requirements-check.yml  publish-to-pypi.yml  style-check.yml  style-requirement-new.yml  style-requirement.yml
GUI/: pyi_rth_gstreamer.py  walrio_lite.py  walrio_lite.spec  walrio_main.py  walrio_main.spec  walrio_main_mvc.py
GUI/WalrioLiteGUI/: README.md  main.py
GUI/WalrioLiteGUI/controllers/: __init__.py  main_controller.py  playback_controller.py  playlist_controller.py  queue_controller.py
GUI/WalrioLiteGUI/models/: __init__.py  data_models.py  workers.py  workers_old.py
GUI/WalrioLiteGUI/views/: base_view.py  controls_view.py  credits_view.py  error_dialog.py  info_view.py  main_window.py  playlist_content_view.py  playlist_sidebar.py  queue_view.py
GUI/WalrioMainGUI/: README.md  __init__.py  __main__.py  main.py
GUI/WalrioMainGUI/controllers/: main_controller.py  playback_controller.py  playlist_controller.py  queue_controller.py
GUI/WalrioMainGUI/models/: data_models.py  workers.py  workers_old.py
GUI/WalrioMainGUI/views/: __init__.py  controls_view.py  credits_view.py  info_view.py  main_window.py  playlist_content_view.py  playlist_sidebar.py  queue_view.py
GUI/hooks/: hook-gi.repository.Gst.py
docs/: .gitignore  README.md  generate_all_docs.py  generate_api_docs.py  generate_cli_docs.py  generate_gui_docs.py  requirements.txt
docs/source/: conf.py  gui_usage.rst  index.rst
docs/source/api/: addons.rst  core.rst  database.rst  index.rst  libraries.rst  niche.rst  player.rst  playlist.rst  queue.rst
licenses/ImageMagick/ImageMagick/: LICENSE
licenses/complexlogic/rsgain/: LICENSE
modules/: __init__.py  walrio.py  walrio_remade.py
modules/addons/: __init__.py  apply_loudness.py  apply_loudness_remade.py  convert.py  convert_remade.py  file_relocater.py  file_relocater_remade.py  image_converter.py  image_converter_remade.py  imageconverter.py  metadata.py  playlist_case_conflicts.py  playlist_case_conflicts_remade.py  playlist_cleaner.py  playlist_cleaner_remade.py  playlist_cloner.py  playlist_cloner_remade.py  playlist_deleter.py  playlist_deleter_remade.py  playlist_fixer.py  playlist_fixer_remade.py  playlist_mover.py  playlist_mover_remade.py  playlist_overlap.py  playlist_overlap_remade.py  playlist_updater.py  playlist_updater_remade.py  rename.py  rename_remade.py  replay_gain.py  replay_gain_remade.py  replaygain.py  resize_album_art.py  resize_album_art_remade.py  resizealbumart.py
modules/core/: __init__.py  database.py  database_remade.py  db_playlist.py  db_queue.py  dependency_checker.py  metadata.py  metadata_remade.py  player.py  player_remade.py  playlist.py  playlist_remade.py  queue.py  queue_remade.py
modules/database/: smart_playlist.py
modules/libraries/: audio_library.py  audio_player.py  audio_queue.py  database.py  player.py  playlist.py  queue.py
modules/niche/: __init__.py  aacplayer_sync.py  applyloudness.py  flacplayer_sync.py  imageconverter.py  mp3player_sync.py  opusplayer_sync.py  resizealbumart.py  walrio_import.py  walrio_import_remade.py
test/: put_test_files_here
testing_files/: test.flac  test.m4a  test.opus  test_missing.m3u  testhalfplaylist.m3u  testplaylist.m3u
